; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslerror.c_AslCheckExpectedExceptions.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslerror.c_AslCheckExpectedExceptions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@AslGbl_ExpectedMessagesIndex = common dso_local global i64 0, align 8
@AslGbl_ExpectedMessages = common dso_local global %struct.TYPE_2__* null, align 8
@ASL_ERROR = common dso_local global i32 0, align 4
@ASL_MSG_EXCEPTION_NOT_RECEIVED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AslCheckExpectedExceptions() #0 {
  %1 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  br label %2

2:                                                ; preds = %23, %0
  %3 = load i64, i64* %1, align 8
  %4 = load i64, i64* @AslGbl_ExpectedMessagesIndex, align 8
  %5 = icmp ult i64 %3, %4
  br i1 %5, label %6, label %26

6:                                                ; preds = %2
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @AslGbl_ExpectedMessages, align 8
  %8 = load i64, i64* %1, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %22, label %13

13:                                               ; preds = %6
  %14 = load i32, i32* @ASL_ERROR, align 4
  %15 = load i32, i32* @ASL_MSG_EXCEPTION_NOT_RECEIVED, align 4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** @AslGbl_ExpectedMessages, align 8
  %17 = load i64, i64* %1, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i64 %17
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @AslError(i32 %14, i32 %15, i32* null, i32 %20)
  br label %22

22:                                               ; preds = %13, %6
  br label %23

23:                                               ; preds = %22
  %24 = load i64, i64* %1, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* %1, align 8
  br label %2

26:                                               ; preds = %2
  ret void
}

declare dso_local i32 @AslError(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
